tests/ill_typed/function_params.mist
def foo(a: Int, b: String): Int = a
foo("1", "s")